# TicketSystem

./: .gitignore  CMakeLists.txt  code  run-test
docs/: README.md  设计文档.md
include/: bpt.hpp  memory_river.hpp  priority_queue.hpp  ticket.hpp  train.hpp  user.hpp  utility.hpp  vector.hpp
prework/: BPT.cpp  BPT.hpp  MemoryRiver.cpp  MemoryRiver.hpp  gen.cpp  sol.cpp  test  test.in  test.out
src/: bpt.cpp  main.cpp  memory_river.cpp  ticket.cpp  train.cpp  user.cpp  utility.cpp
